General Sass Style

--- a/css/style.css
+++ b/css/style.css
@@ -1,216 +1,2 @@
-/* ---------- GENERAL ---------- */
-:root {
-	--color-dark: #07080d;
-	--color-white: #fff;
-}
-
-body {
-	color: var(--color-dark);
-	font-family: "Lato", sans-serif;
-	font-size: 20px;
-	line-height: 32px;
-	transition: 0.5s;
-}
-
-a {
-	color: var(--color-dark);
-	text-decoration: underline;
-}
-
-a:hover {
-	color: #1d91ca;
-}
-
-/* ---------- FONT WEIGHT ---------- */
-b,
-strong {
-	font-weight: 700;
-}
-
-p {
-	font-weight: 300;
-}
-
-h1,
-.h1,
-h3,
-.h3,
-h4,
-.h4,
-h5,
-.h5 {
-	font-weight: 700;
-}
-
-h2,
-.h2 {
-	font-weight: 300;
-}
-
-/* ---------- FONT SIZE ---------- */
-h1,
-.h1 {
-	font-size: 3.052em;
-}
-
-h2,
-.h2 {
-	font-size: 2.441em;
-}
-
-h3 {
-	font-size: 1.953em;
-}
-
-h4 {
-	font-size: 1.563em;
-}
-
-h5 {
-	font-size: 1.25em;
-}
-
-/* ---------- BOOTSTRAP ENHANCED ---------- */
-.overflow-x-hidden {
-	overflow-x: hidden !important;
-}
-
-.mb-6,
-.my-6 {
-	margin-bottom: 4rem !important;
-}
-
-.mt-6,
-.my-6 {
-	margin-top: 4rem !important;
-}
-
-.mb-7,
-.my-7 {
-	margin-bottom: 5rem !important;
-}
-
-.mt-7,
-.my-7 {
-	margin-top: 5rem !important;
-}
-
-.mt-12,
-.my-12 {
-	margin-top: 10rem !important;
-}
-
-small,
-.text_small {
-	font-size: 0.8em;
-	font-weight: 300;
-}
-
-.big {
-	font-size: 5em;
-	line-height: 1.1em;
-}
-
-.hi-emoji {
-	display: inline-block;
-}
-
-/* ---------- PORTFOLIO SECTION ---------- */
-.work a {
-	color: var(--color-white);
-}
-
-.separator-container {
-	overflow: hidden;
-	width: 20%;
-}
-
-.separator {
-	border-color: var(--color-white);
-	width: 100px;
-	transition: 0.5s;
-	margin-right: 10px;
-}
-
-.work a:hover .separator {
-	transform: translateX(100%);
-}
-
-/* ---------- FOOTER ---------- */
-footer {
-	text-align: right;
-}
-
-/* ---------- SWIPER JS ---------- */
-.swiper-container {
-	overflow: visible;
-}
-
-.swiper-slide {
-	height: auto;
-}
-
-.swiper-container-horizontal > .swiper-pagination-bullets {
-	bottom: -50px;
-}
-
-.swiper-pagination-bullet-active {
-	background: var(--color-dark);
-}
-
-/* HOME SLIDER */
-.presentation-box {
-	width: 70%;
-	max-width: 700px;
-}
-
-.presentation-box,
-.presentation-box a {
-	color: var(--color-white);
-}
-
-/* Gradient */
-.gradient-box {
-	height: 100vh;
-	position: absolute;
-	right: 0;
-	top: 0;
-	width: 100%;
-	z-index: -1;
-}
-
-.gradient-cool {
-	width: 100%;
-	height: 100%;
-	clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 100% 100%, 0% 90%);
-}
-
-/* ---------- MOBILE ---------- */
-@media screen and (max-width: 425px) {
-	.presentation,
-	.presentation a {
-		color: var(--color-white);
-	}
-
-	.presentation-box {
-		width: 100%;
-		max-width: 100%;
-	}
-
-	/* Gradient */
-	.gradient-box {
-		height: 115vh;
-		left: 0;
-		right: unset;
-		width: 100%;
-	}
-
-	.gradient-cool {
-		clip-path: polygon(50% 100%, 100% 90%, 100% 0%, 0% 0%, 0 90%);
-	}
-
-	.sm-mt-12,
-	.sm-my-12 {
-		margin-top: 10rem !important;
-	}
-}
+body{color:#07080d;font-family:"Lato", sans-serif;font-size:20px;line-height:32px;-webkit-transition:0.5s;transition:0.5s}a{color:#07080d;text-decoration:underline}a:hover{color:#1d91ca}b,strong,h1,.h1,h3,.h3,h4,.h4,h5,.h5{font-weight:700}p,h2,.h2{font-weight:300}h1,.h1{font-size:3.052em}h2,.h2{font-size:2.441em}h3{font-size:1.953em}h4{font-size:1.563em}h5{font-size:1.25em}.hi-emoji{display:inline-block}.work a{color:#fff}.work a:hover .separator{-webkit-transform:translateX(100%);transform:translateX(100%)}.separator-container{overflow:hidden;width:20%}.separator{border-color:#fff;width:100px;-webkit-transition:0.5s;transition:0.5s;margin-right:10px}footer{text-align:right}.presentation-box{width:70%;max-width:700px;color:#fff}.presentation-box a{color:#fff}.gradient-box{height:100vh;position:absolute;right:0;top:0;width:100%;z-index:-1}.gradient-cool{width:100%;height:100%;-webkit-clip-path:polygon(0% 0%, 100% 0%, 100% 100%, 100% 100%, 0% 90%);clip-path:polygon(0% 0%, 100% 0%, 100% 100%, 100% 100%, 0% 90%)}@media screen and (max-width: 425px){.presentation,.presentation a{color:#fff}.presentation-box{width:100%;max-width:100%}.gradient-box{height:115vh;left:0;right:unset;width:100%}.gradient-cool{-webkit-clip-path:polygon(50% 100%, 100% 90%, 100% 0%, 0% 0%, 0 90%);clip-path:polygon(50% 100%, 100% 90%, 100% 0%, 0% 0%, 0 90%)}.sm-mt-12,.sm-my-12{margin-top:10rem !important}}.overflow-x-hidden{overflow-x:hidden !important}.mb-6,.my-6{margin-bottom:4rem !important}.mt-6,.my-6{margin-top:4rem !important}.mb-7,.my-7{margin-bottom:5rem !important}.mt-7,.my-7{margin-top:5rem !important}.mt-12,.my-12{margin-top:10rem !important}small,.text_small{font-size:0.8em;font-weight:300}.big{font-size:5em;line-height:1.1em}.swiper-container{overflow:visible}.swiper-slide{height:auto}.swiper-container-horizontal>.swiper-pagination-bullets{bottom:-50px}.swiper-pagination-bullet-active{background:#07080d}.top-bottom-button img{-webkit-animation-name:read-button-anime;animation-name:read-button-anime;-webkit-animation-duration:2s;animation-duration:2s;-webkit-animation-iteration-count:infinite;animation-iteration-count:infinite;-webkit-animation-timing-function:ease-out;animation-timing-function:ease-out}@-webkit-keyframes read-button-anime{0%{-webkit-transform:translateY(-22px);transform:translateY(-22px);opacity:0}50%{-webkit-transform:translateY(0);transform:translateY(0);-webkit-animation-iteration-count:1;animation-iteration-count:1;opacity:100%}100%{-webkit-transform:translateY(22px);transform:translateY(22px);opacity:0}}@keyframes read-button-anime{0%{-webkit-transform:translateY(-22px);transform:translateY(-22px);opacity:0}50%{-webkit-transform:translateY(0);transform:translateY(0);-webkit-animation-iteration-count:1;animation-iteration-count:1;opacity:100%}100%{-webkit-transform:translateY(22px);transform:translateY(22px);opacity:0}}.hi-name .hi-emoji{-webkit-animation-duration:0.5s;animation-duration:0.5s;-webkit-animation-iteration-count:infinite;animation-iteration-count:infinite;-webkit-animation-timing-function:ease-in-out;animation-timing-function:ease-in-out;-webkit-animation-direction:alternate;animation-direction:alternate}.hi-name:hover .hi-emoji{-webkit-animation-name:hi-animation;animation-name:hi-animation}@-webkit-keyframes hi-animation{from{-webkit-transform:rotate(0);transform:rotate(0)}to{-webkit-transform:rotate(20deg);transform:rotate(20deg)}}@keyframes hi-animation{from{-webkit-transform:rotate(0);transform:rotate(0)}to{-webkit-transform:rotate(20deg);transform:rotate(20deg)}}@media (prefers-color-scheme: dark){body{background-color:#07080d;color:#fff}a{color:#fff}.swiper-pagination-bullet,.swiper-pagination-bullet-active{background:#fff}}
+/*# sourceMappingURL=style.css.map */
