--- a/scss/_dark-mode.scss
+++ b/scss/_dark-mode.scss
@@ -1,16 +1,16 @@
 @media (prefers-color-scheme: dark) {
 	body {
-		background-color: var(--color-dark);
-		color: var(--color-white);
+		background-color: $colorDark;
+		color: $colorWhite;
 	}
 
 	a {
-		color: var(--color-white);
+		color: $colorWhite;
 	}
 
 	/* Swiper JS */
 	.swiper-pagination-bullet,
 	.swiper-pagination-bullet-active {
-		background: var(--color-white);
+		background: $colorWhite;
 	}
 }
