rimosso BS, modifiche CSS e HTML

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,12 @@
-@import "general";
+/* @import "general";
 @import "heading";
 @import "style";
 @import "bootstrap";
 @import "swiper";
 @import "animation";
 @import "dark-mode";
+ */
+@import "new/theme";
+@import "new/base/card";
+@import "new/base/utility";
+@import "new/typography";
