--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,7 +1,7 @@
 @font-face {
 	font-family: "site";
-	src: url("/fonts/site.eot?j7elt3");
-	src: url("/fonts/site.eot?j7elt3#iefix") format("embedded-opentype"), url("/fonts/site.ttf?j7elt3") format("truetype"), url("/fonts/site.woff?j7elt3") format("woff"), url("/fonts/site.svg?j7elt3#site") format("svg");
+	src: url("../fonts/site.eot?j7elt3");
+	src: url("../fonts/site.eot?j7elt3#iefix") format("embedded-opentype"), url("../fonts/site.ttf?j7elt3") format("truetype"), url("../fonts/site.woff?j7elt3") format("woff"), url("../fonts/site.svg?j7elt3#site") format("svg");
 	font-weight: normal;
 	font-style: normal;
 	font-display: block;
