--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,13 +1,9 @@
-/* @import "general";
-@import "heading";
-@import "style";
-@import "bootstrap";
-@import "swiper";
-@import "animation";
+@import "utilities/variables";
+@import "theme";
+@import "base/card";
+@import "base/utility";
+@import "typography";
+@import "layout/footer";
+@import "extensions/swiper";
+@import "animation/animation";
 @import "dark-mode";
- */
-@import "new/theme";
-@import "new/base/card";
-@import "new/base/utility";
-@import "new/typography";
-@import "new/animation/animation";
