card aspect ratio

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "base/card";
 @import "base/utility";
 @import "typography";
+@import "components/card";
 @import "layout/footer";
 @import "extensions/swiper";
 @import "animation/animation";
