--- a/scss/base/_utility.scss
+++ b/scss/base/_utility.scss
@@ -11,6 +11,28 @@ html {
 	padding-right: 15px;
 	max-width: 992px;
 	margin: auto;
+
+	&--full {
+		max-width: 2400px;
+	}
+
+	&--grid {
+		display: grid;
+		gap: 2px;
+		grid-template-columns: 1fr;
+
+		@media (min-width: 768px) {
+			grid-template-columns: repeat(2, 1fr);
+		}
+
+		@media (min-width: 1200px) {
+			grid-template-columns: repeat(4, 1fr);
+		}
+
+		@media (min-width: 1800px) {
+			grid-template-columns: repeat(5, 1fr);
+		}
+	}
 }
 
 *,
