--- a/scss/base/_utility.scss
+++ b/scss/base/_utility.scss
@@ -61,6 +61,11 @@ body {
 }
 
 .splash-hero-container {
+	.icon-label {
+		position: absolute;
+		left: -50000px;
+		overflow: hidden;
+	}
 }
 
 .gradient-box {
@@ -88,10 +93,6 @@ body {
 	display: flex;
 	flex-direction: row;
 	gap: 2rem;
-
-	span:not([class^="icon"]) {
-		display: none;
-	}
 }
 
 .img-fluid {
