--- a/scss/base/_utility.scss
+++ b/scss/base/_utility.scss
@@ -1,105 +1,110 @@
 html {
-	font-size: 9px;
+  font-size: 9px;
 
-	@media (min-width: 768px) {
-		font-size: 10px;
-	}
+  @media (min-width: 768px) {
+    font-size: 10px;
+  }
 }
 
 .container {
-	padding-left: 15px;
-	padding-right: 15px;
-	max-width: 992px;
-	margin: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  max-width: 992px;
+  margin: auto;
 
-	&--full {
-		max-width: 2400px;
-	}
+  &--full {
+    max-width: 2400px;
+  }
 
-	&--grid {
-		display: grid;
-		gap: 2px;
-		grid-template-columns: 1fr;
+  &--grid {
+    display: grid;
+    gap: 2px;
+    grid-template-columns: 1fr;
 
-		@media (min-width: 768px) {
-			grid-template-columns: repeat(2, 1fr);
-		}
+    @media (min-width: 768px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
 
-		@media (min-width: 1200px) {
-			grid-template-columns: repeat(4, 1fr);
-		}
+    @media (min-width: 1200px) {
+      grid-template-columns: repeat(4, 1fr);
+    }
 
-		@media (min-width: 1800px) {
-			grid-template-columns: repeat(5, 1fr);
-		}
-	}
+    @media (min-width: 1800px) {
+      grid-template-columns: repeat(5, 1fr);
+    }
+  }
 }
 
 *,
 *:after,
 *:before {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	margin: auto;
-	font-size: 1.6rem;
-	overflow-x: hidden;
+  margin: auto;
+  font-size: 1.6rem;
+  overflow-x: hidden;
 }
 
 .min-vh-100 {
-	min-height: 100vh;
+  min-height: 100vh;
 }
 
 .splash-hero {
-	position: relative;
-	min-height: 100vh;
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	color: #fff;
+  position: relative;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  font-size: 80px;
+
+  &,
+  a {
+    color: #343a40;
+  }
 }
 
 .splash-hero-container {
-	.icon-label {
-		position: absolute;
-		left: -50000px;
-		overflow: hidden;
-	}
+  .icon-label {
+    position: absolute;
+    left: -50000px;
+    overflow: hidden;
+  }
 }
 
 .gradient-box {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	z-index: -1;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
 }
 
 .fs- {
-	&1 {
-		font-size: 5rem;
-	}
+  &1 {
+    font-size: 5rem;
+  }
 
-	&2 {
-		font-size: 2.5rem;
-	}
+  &2 {
+    font-size: 2.5rem;
+  }
 
-	&3 {
-		font-size: 2rem;
-	}
+  &3 {
+    font-size: 2rem;
+  }
 }
 
 .social-icon-container {
-	display: flex;
-	flex-direction: row;
-	gap: 2rem;
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
 }
 
 .img-fluid {
-	width: 100%;
-	height: auto;
+  width: 100%;
+  height: auto;
 }
 
 img {
-	display: block;
+  display: block;
 }
