--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,47 @@
-@import "utilities/variables";
-@import "theme";
-@import "base/utility";
-@import "typography";
-@import "components/card";
-@import "layout/footer";
-@import "extensions/swiper";
-@import "animation/animation";
-@import "dark-mode";
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;300&display=swap");
+
+body {
+  --theme-light: #fff;
+  --theme-dark: #0a0a0a;
+
+  font-family: "Raleway", sans-serif;
+  margin: 0;
+
+  color: var(--theme-dark);
+  background: var(--theme-light);
+
+  path {
+    fill: var(--theme-dark);
+  }
+
+  @media (prefers-color-scheme: dark) {
+    --theme-light: #0a0a0a;
+    --theme-dark: #fff;
+  }
+}
+
+.hero {
+  display: grid;
+  place-items: center;
+
+  text-align: center;
+
+  min-height: 100vh;
+}
+
+.h1 {
+  font-weight: 300;
+}
+
+.smallTitle {
+  font-size: 0.8em;
+}
+
+.github {
+  position: fixed;
+  top: 1rem;
+  right: 1rem;
+
+  width: 2.5rem;
+  height: 2.5rem;
+}
